dev.1.82. addition and usage of CustomMessageBoxButtonStyle

--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -27,6 +27,7 @@
                 
                 <!--MainWindow styles-->
                 <ResourceDictionary Source="Styles/TitleBarButtonStyle.xaml" />
+                <ResourceDictionary Source="Styles/CustomMessageBoxButtonStyle.xaml" />
                 <ResourceDictionary Source="Styles/NonDefaultWindowStyle.xaml" />
                 
                 
