--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -57,8 +57,8 @@
                         <views:RecoveryView/>
                     </DataTemplate>
 
-                    <DataTemplate DataType="{x:Type viewModels:CodeConfirmationViewModel}">
-                        <views:CodeConfirmationView/>
+                    <DataTemplate DataType="{x:Type viewModels:RecoveryCodeConfirmationViewModel}">
+                        <views:RecoveryCodeConfirmationView/>
                     </DataTemplate>
 
                     <DataTemplate DataType="{x:Type viewModels:ChangePasswordViewModel}">
