--- a/Chat/MVVM/Views/RecoveryCodeConfirmationView.xaml
+++ b/Chat/MVVM/Views/RecoveryCodeConfirmationView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Chat.MVVM.Views.CodeConfirmationView"
+﻿<UserControl x:Class="Chat.MVVM.Views.RecoveryCodeConfirmationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,7 +9,7 @@
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             d:DataContext="{d:DesignInstance Type=viewModels:CodeConfirmationViewModel}">
+             d:DataContext="{d:DesignInstance Type=viewModels:RecoveryCodeConfirmationViewModel}">
 
     <StackPanel HorizontalAlignment="Center"
                 Background="{DynamicResource MainBackground}"
