temp.5.12. addition of EmailVerificationView

--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -65,6 +65,10 @@
                         <views:ChangePasswordView/>
                     </DataTemplate>
 
+                    <DataTemplate DataType="{x:Type viewModels:EmailVerificationViewModel}">
+                        <views:EmailVerificationView/>
+                    </DataTemplate>
+
                 </ResourceDictionary>
                 
             </ResourceDictionary.MergedDictionaries>
