temp.6.1. Views does not have Width property anymore

--- a/Chat/MVVM/Views/ChangePasswordView.xaml
+++ b/Chat/MVVM/Views/ChangePasswordView.xaml
@@ -8,12 +8,10 @@
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=viewModels:ChangePasswordViewModel}">
     
     <StackPanel Background="{DynamicResource MainBackground}"
-                HorizontalAlignment="Center"
-                Width="500">
+                HorizontalAlignment="Center">
 
         <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
            Text="Change Password"/>
