--- a/Chat/MVVM/Views/LoginView.xaml
+++ b/Chat/MVVM/Views/LoginView.xaml
@@ -8,13 +8,11 @@
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls" 
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=viewModels:LoginViewModel}"
              >
 
     <StackPanel HorizontalAlignment="Center" 
-                Background="{DynamicResource MainBackground}"
-                Width="400">
+                Background="{DynamicResource MainBackground}">
 
         <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
                    Text="Sign in"/>
