--- a/Chat/MVVM/Views/RegistrationView.xaml
+++ b/Chat/MVVM/Views/RegistrationView.xaml
@@ -9,7 +9,6 @@
              xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=viewModels:RegistrationViewModel}"
              >
 
@@ -21,7 +20,7 @@
 
             <userControls:Logotype Height="80"/>
 
-            <Grid Margin="0,30" Width="400">
+            <Grid Margin="0,30">
 
                 <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"/>
 
