--- a/Chat/Styles/EntryWindows/EntryWindowsTextBlockStyle.xaml
+++ b/Chat/Styles/EntryWindows/EntryWindowsTextBlockStyle.xaml
@@ -7,6 +7,8 @@
 
         <Setter Property="FontSize" Value="20"/>
 
+        <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+
     </Style>
     
 </ResourceDictionary>
