temp.6.7. all Views have responsive design

--- a/Chat/MVVM/Views/ChangePasswordView.xaml
+++ b/Chat/MVVM/Views/ChangePasswordView.xaml
@@ -8,72 +8,88 @@
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              mc:Ignorable="d" 
+             d:Width="1920" d:Height="1080"
              d:DataContext="{d:DesignInstance Type=viewModels:ChangePasswordViewModel}">
-    
-    <StackPanel Background="{DynamicResource MainBackground}"
-                HorizontalAlignment="Center">
 
-        <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
-           Text="Change Password"/>
+    <Grid Background="{DynamicResource MainBackground}">
 
-        <userControls:Logotype Height="80"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Style="{StaticResource EntryWindowsSideColumnStyle}"/>
+            <ColumnDefinition Style="{StaticResource EntryWindowsMainColumnStyle}"/>
+            <ColumnDefinition Style="{StaticResource EntryWindowsSideColumnStyle}"/>
+        </Grid.ColumnDefinitions>
 
-        <Grid Margin="0,30">
+        <Viewbox Grid.Column="1"
+                 VerticalAlignment="Top"
+                 Stretch="Uniform">
 
-            <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"/>
+            <StackPanel Width="500">
 
-            <StackPanel Margin="24">
+                <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
+                           Text="Password Change"/>
 
-                <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
-                           Margin="3, 0"
-                           Text="New password"/>
+                <userControls:Logotype Height="100"/>
 
+                <Grid Margin="0,30">
 
-                <userControls:ClearablePasswordBox x:Name="mainPassBox" 
-                                                   Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
-                                                   RelatedPasswordBox="{Binding ElementName=confirmPassBox, UpdateSourceTrigger=PropertyChanged}"
-                                                   Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
-                                                   Margin="0, 10"
-                                                   PlaceholderText="Enter password..."/>
+                    <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"/>
 
+                    <StackPanel Margin="24">
 
-                <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
-                           Margin="3, 10"
-                           Text="Confirm new password"/>
+                        <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                                   Margin="3, 0"
+                                   Text="New password"/>
 
 
-                <userControls:ClearablePasswordBox x:Name="confirmPassBox" 
-                                                   Password="{Binding ConfirmationPassword, Mode=TwoWay, ValidatesOnExceptions=True}" 
-                                                   RelatedPasswordBox="{Binding ElementName=mainPassBox, UpdateSourceTrigger=PropertyChanged}"
-                                                   Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
-                                                   PlaceholderText="Enter password again..."/>
+                        <userControls:ClearablePasswordBox x:Name="mainPassBox" 
+                                                           Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                           RelatedPasswordBox="{Binding ElementName=confirmPassBox, UpdateSourceTrigger=PropertyChanged}"
+                                                           Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                           Margin="0, 10"
+                                                           PlaceholderText="Enter password..."/>
 
 
-                <userControls:Button Command="{Binding SubmitCommand}"
-                                     Style="{StaticResource EntryWindowsActionCommandStyle}"
-                                     Margin="0, 25, 0, 0"
-                                     Text="Submit"/>
+                        <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                                   Margin="3, 10"
+                                   Text="Confirm new password"/>
+
+
+                        <userControls:ClearablePasswordBox x:Name="confirmPassBox" 
+                                                           Password="{Binding ConfirmationPassword, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                           RelatedPasswordBox="{Binding ElementName=mainPassBox, UpdateSourceTrigger=PropertyChanged}"
+                                                           Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                           PlaceholderText="Enter password again..."/>
+
+
+                        <userControls:Button Command="{Binding SubmitCommand}"
+                                             Style="{StaticResource EntryWindowsActionCommandStyle}"
+                                             Margin="0, 25, 0, 0"
+                                             Text="Submit"/>
+
+                    </StackPanel>
+
+                </Grid>
+
+                <Grid>
+
+                    <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"
+                                                      Background="Transparent"/>
+
+                    <StackPanel Margin="16"
+                                HorizontalAlignment="Center">
+
+                        <userControls:Button Command="{Binding NavigateToLoginCommand}"
+                                             Style="{StaticResource EntryWindowsNavigationCommandStyle}"
+                                             Text="Back to 'Sign in'"/>
+
+                    </StackPanel>
+
+                </Grid>
 
             </StackPanel>
-            
-        </Grid>
 
-        <Grid>
+        </Viewbox>
 
-            <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"
-                                              Background="Transparent"/>
+    </Grid>
 
-            <StackPanel Margin="16"
-                        HorizontalAlignment="Center">
-
-                <userControls:Button Command="{Binding NavigateToLoginCommand}"
-                                     Style="{StaticResource EntryWindowsNavigationCommandStyle}"
-                                     Text="Back to 'Sign in'"/>
-
-            </StackPanel>
-
-        </Grid>
-
-    </StackPanel>
-    
 </UserControl>
