--- a/Chat/MVVM/Views/RecoveryView.xaml
+++ b/Chat/MVVM/Views/RecoveryView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views"
-             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls" 
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              mc:Ignorable="d" 
@@ -29,7 +29,7 @@
                 <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}"
                            Text="Password Recovery"/>
 
-                <userControls:Logotype Height="100"/>
+                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}" Height="100"/>
 
 
                 <Grid Margin="0, 30">
