--- a/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
+++ b/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
@@ -9,8 +9,7 @@
              xmlns:infrastucture="clr-namespace:Chat.MVVM.Views.UserControls.AdditionalInfrastructure"
              mc:Ignorable="d" 
              x:Name="root"
-             Validation.ErrorTemplate="{StaticResource errorTemplate}"
-             >
+             Validation.ErrorTemplate="{StaticResource errorTemplate}">
 
     <Grid GotFocus="PassBoxGrid_GotFocus" 
           LostFocus="PassBoxGrid_LostFocus"
