--- a/Chat/MVVM/Views/ChangePasswordView.xaml
+++ b/Chat/MVVM/Views/ChangePasswordView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Chat.MVVM.Views"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
-             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              mc:Ignorable="d" 
              d:Width="1920" d:Height="1080"
              d:DataContext="{d:DesignInstance Type=viewModels:ChangePasswordViewModel}">
@@ -28,7 +28,7 @@
                 <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
                            Text="Password Change"/>
 
-                <userControls:Logotype Height="100"/>
+                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}" Height="100"/>
 
                 <Grid Margin="0,30">
 
