--- a/Chat/MVVM/Views/LoginView.xaml
+++ b/Chat/MVVM/Views/LoginView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views"
+             xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls" 
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              mc:Ignorable="d" 
@@ -28,7 +29,7 @@
                 <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
                            Text="Sign In"/>
 
-                <userControls:Logotype Height="100"/>
+                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}" Height="100"/>
 
                 <Grid Margin="0,30">
 
