--- a/Chat/MVVM/Views/UserControls/ErrorsItemsControl.xaml
+++ b/Chat/MVVM/Views/UserControls/ErrorsItemsControl.xaml
@@ -5,12 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views.UserControls"
              mc:Ignorable="d" 
-             x:Name="itemsControl"
-             ItemsSource="{Binding (Validation.Errors), ElementName=root}">
+             x:Name="root"
+             ItemsSource="{Binding (Validation.Errors), RelativeSource={RelativeSource AncestorType=UserControl}}">
     
         <ItemsControl.ItemTemplate>
             <DataTemplate>
-                <TextBlock FontSize="{Binding FontSize, ElementName=itemsControl}" 
+                <TextBlock FontSize="{Binding FontSize, ElementName=root}" 
                            Margin="5,4,0,0" 
                            Foreground="Red" 
                            TextWrapping="WrapWithOverflow"
