--- a/Chat/MVVM/Views/UserControls/FilledRoundedBorder.xaml
+++ b/Chat/MVVM/Views/UserControls/FilledRoundedBorder.xaml
@@ -5,12 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views.UserControls"
              mc:Ignorable="d"
-             x:Name="root">
+             x:Name="root"
+             DataContext="{Binding ElementName=root}">
     
-    <Border x:Name="Border" 
-            BorderBrush="{Binding BorderBrush, ElementName=root}">
+    <Border BorderThickness="{Binding BorderThickness}"
+            BorderBrush="{Binding BorderBrush}"
+            CornerRadius="{Binding Roundation}">
         
-        <Rectangle x:Name="Rect"/>
+        <Rectangle RadiusX="{Binding Roundation}"
+                   RadiusY="{Binding Roundation}"
+                   Fill="{Binding Background}"/>
         
     </Border>
 </UserControl>
